# quicorn

./: .gitignore  LICENSE  README.md  pyproject.toml
quicorn/: __init__.py  app.py  config.py  graceful.py  main.py  server.py  types.py
quicorn/graceful/: __init__.py  background.py  timer.py
quicorn/logger/: __init__.py  _formatter.py
quicorn/logger/formatter/: __init__.py  consts.py  enums.py  formatter.py
quicorn/qsgi/: app.py  context.py  protocol.py
