[tool.poetry]
name = "quicorn"
version = "0.1.0"
description = ""
authors = ["frezX <fffrrreeezzz.xxx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13.0,<4.0.0"

loguru = "^0.7.3"
pydantic = "^2.12.5"
aioquic = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "ASYNC"   # flake8-async
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
